# ToolSpriteTool

./: .gitignore
SpriteTool/: CMakeLists.txt  SpriteTool.sln
SpriteTool/SpriteTool/: SpriteTool.vcxproj  SpriteTool.vcxproj.filters  SpriteToolGUI.vcxproj  SpriteToolGUI.vcxproj.filters
SpriteTool/SpriteTool/Source/: CommonHeader.cpp  CommonHeader.h  GameCore.cpp  GameCore.h  ShaderProgram.cpp  ShaderProgram.h  SpriteTool.cpp  SpriteTool.h  WinMain.cpp
SpriteTool/SpriteTool/Source/BinPackers/: MaxRectsBinPack.cpp  MaxRectsBinPack.h
SpriteTool/SpriteTool/Source/GL/: GLExtensions.cpp  GLExtensions.h
SpriteTool/SpriteTool/Source/MarchingSquares/: MarchingSquares.h
SpriteTool/SpriteTool/Source/cJSON/: cJSON.cpp
